--- a/src/app/page/book-list/book-list.component.html
+++ b/src/app/page/book-list/book-list.component.html
@@ -1,181 +1,201 @@
-<div class="table-responsive small">
-  <table class="table table-striped table-sm">
-    <thead *ngIf="bookList.length>0">
-      <tr>
-        <th scope="col" class="text-center">No</th>
-        <th scope="col" class="text-center">ISBN</th>
-        <th scope="col" class="text-center">Title</th>
-        <th scope="col" class="text-center">Category</th>
-        <th scope="col" class="text-center">QTY</th>
-        <th scope="col" class="text-center">Price</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let book of bookList; let i = index">
-        <td class="text-center">#BN{{ i + 1 }}</td>
-        <td class="text-center">{{ book.isbn }}</td>
-        <td class="text-center">{{ book.title }}</td>
-        <td class="text-center">{{ book.category }}</td>
-        <td class="text-center">{{ book.qty }}</td>
-        <td class="text-center">{{ book.price }}</td>
-        <td>
-          <button
-            type="button"
-            (click)="deleteConfimationAlet(book)"
-            class="btn btn-outline-danger mx-3"
-          >
-            <i class="bi bi-trash3-fill"></i>
-          </button>
 
-          <button
-            data-bs-toggle="modal"
-            data-bs-target="#updateModal2"
-            type="button"
-            (click)="setSelectBook(book)"
-            class="btn btn-outline-primary"
-          >
-            <i class="bi bi-pencil-square"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<div class="row">
+  <app-header></app-header>
 </div>
-
-
-<!--Updata Modal-->
-<div
-  class="modal fade"
-  id="updateModal2"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">UPDATA</h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
+<div class="container ">
+  <div class="row">
+    <div class="col-4">
+      <br />
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-8">
+      <br>
+      <div class="table-responsive small">
+        <table class="table table-striped table-sm">
+          <thead *ngIf="bookList.length>0">
+            <tr>
+              <th scope="col" class="text-center">No</th>
+              <th scope="col" class="text-center">ISBN</th>
+              <th scope="col" class="text-center">Title</th>
+              <th scope="col" class="text-center">Category</th>
+              <th scope="col" class="text-center">QTY</th>
+              <th scope="col" class="text-center">Price</th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let book of bookList; let i = index">
+              <td class="text-center">#BN{{ i + 1 }}</td>
+              <td class="text-center">{{ book.isbn }}</td>
+              <td class="text-center">{{ book.title }}</td>
+              <td class="text-center">{{ book.category }}</td>
+              <td class="text-center">{{ book.qty }}</td>
+              <td class="text-center">{{ book.price }}</td>
+              <td>
+                <button
+                  type="button"
+                  (click)="deleteConfimationAlet(book)"
+                  class="btn btn-outline-danger mx-3"
+                >
+                  <i class="bi bi-trash3-fill"></i>
+                </button>
+      
+                <button
+                  data-bs-toggle="modal"
+                  data-bs-target="#updateModal2"
+                  type="button"
+                  (click)="setSelectBook(book)"
+                  class="btn btn-outline-primary"
+                >
+                  <i class="bi bi-pencil-square"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <div class="modal-body">
-        <div class="row g-3">
-          <div class="col-12">
-            <label for="firstName" class="form-label fw-bold">ISBN</label>
-            <input
-              type="text"
-              disabled
-              class="form-control"
-              id="firstName"
-              placeholder=""
-              value=""
-              [(ngModel)]="selectBook.isbn"
-            />
-          </div>
-
-          <div class="col-12">
-            <label for="lastName" class="form-label fw-bold">Title</label>
-            <input
-              type="text"
-              class="form-control"
-              id="lastName"
-              placeholder=""
-              value=""
-              [(ngModel)]="selectBook.title"
-            />
-          </div>
-
-          <div class="col-12">
-            <label for="username" class="form-label fw-bold">Category</label>
-            <div class="input-group has-validation">
-              <input
-                type="text"
-                class="form-control"
-                id="username"
-                placeholder=""
-                [(ngModel)]="selectBook.category"
-              />
+      
+      
+      <!--Updata Modal-->
+      <div
+        class="modal fade"
+        id="updateModal2"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">UPDATA</h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="row g-3">
+                <div class="col-12">
+                  <label for="firstName" class="form-label fw-bold">ISBN</label>
+                  <input
+                    type="text"
+                    disabled
+                    class="form-control"
+                    id="firstName"
+                    placeholder=""
+                    value=""
+                    [(ngModel)]="selectBook.isbn"
+                  />
+                </div>
+      
+                <div class="col-12">
+                  <label for="lastName" class="form-label fw-bold">Title</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="lastName"
+                    placeholder=""
+                    value=""
+                    [(ngModel)]="selectBook.title"
+                  />
+                </div>
+      
+                <div class="col-12">
+                  <label for="username" class="form-label fw-bold">Category</label>
+                  <div class="input-group has-validation">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="username"
+                      placeholder=""
+                      [(ngModel)]="selectBook.category"
+                    />
+                  </div>
+                </div>
+                <div class="col-12">
+                  <label for="username" class="form-label fw-bold">QTY</label>
+                  <div class="input-group has-validation">
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="username"
+                      placeholder=""
+                      [(ngModel)]="selectBook.qty"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
+                <label for="username" class="form-label fw-bold">Price</label>
+                <div class="input-group has-validation">
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="username"
+                    placeholder=""
+                    [(ngModel)]="selectBook.price"
+                  />
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Close
+                </button>
+                <button
+                  type="button"
+                  data-bs-toggle="modal"
+                  data-bs-target="#updataConformationModal"
+                  class="btn btn-primary"
+                >
+                  Updata
+                </button>
+              </div>
             </div>
           </div>
-          <div class="col-12">
-            <label for="username" class="form-label fw-bold">QTY</label>
-            <div class="input-group has-validation">
-              <input
-                type="number"
-                class="form-control"
-                id="username"
-                placeholder=""
-                [(ngModel)]="selectBook.qty"
-              />
+        </div>
+      </div>
+      
+      <!--Updata conformation Modal-->
+      
+      <div
+        class="modal fade"
+        id="updataConformationModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Confromation Update</h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">If you want to update "{{selectBook.title}}" this book..</div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                Close
+              </button>
+              <button type="button" (click)="updataBook()" data-bs-dismiss="modal" class="btn btn-primary">Conform Update</button>
             </div>
           </div>
         </div>
-        <div class="col-12">
-          <label for="username" class="form-label fw-bold">Price</label>
-          <div class="input-group has-validation">
-            <input
-              type="number"
-              class="form-control"
-              id="username"
-              placeholder=""
-              [(ngModel)]="selectBook.price"
-            />
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-secondary"
-            data-bs-dismiss="modal"
-          >
-            Close
-          </button>
-          <button
-            type="button"
-            data-bs-toggle="modal"
-            data-bs-target="#updataConformationModal"
-            class="btn btn-primary"
-          >
-            Updata
-          </button>
-        </div>
       </div>
+      
     </div>
   </div>
 </div>
 
-<!--Updata conformation Modal-->
 
-<div
-  class="modal fade"
-  id="updataConformationModal"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Confromation Update</h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">If you want to update "{{selectBook.title}}" this book..</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-        <button type="button" (click)="updataBook()" data-bs-dismiss="modal" class="btn btn-primary">Conform Update</button>
-      </div>
-    </div>
-  </div>
-</div>
+
+
