--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="row">
+  <app-header></app-header>
+</div>
+<div class="container ">
+  <div class="row">
+    <div class="col-4">
+      <br />
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-8">
+      <p>home works!</p>
+    </div>
+  </div>
+</div>
