--- a/src/app/page/borrow-book/borrow-book.component.html
+++ b/src/app/page/borrow-book/borrow-book.component.html
@@ -27,54 +27,50 @@
       </div>
     </div>
     <div class="col-6">
-        <div class="container-fluid" *ngIf="userDatils">
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="text"
-                placeholder=" Enter Book ID"
-                aria-label="Search"
-                [(ngModel)]="bookId"
-                [ngModelOptions]="{ standalone: true }"
-                
-              />
-              <button
-                class="btn btn-outline-primary"
-                type="submit"
-                (click)="searchBook()"
-              >
-                Search
-              </button>
-            </form>
-        </div>
-         <br><br><br>
-        <table class="table table-bordered table-primary" *ngIf="confirmObj">
-            <thead>
-              <tr>
-                <th scope="col">#NO</th>
-                <th scope="col">ID</th>
-                <th scope="col">ISBN</th>
-                <th scope="col">Title</th>
-                <th scope="col">Price</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let book of selectBookList; let i=index">
-                <td>{{i+1}}</td>
-                <th>{{book.id}}</th>
-                <td>{{book.isbn}}</td>
-                <td>{{book.title}}</td>
-                <td>{{book.price}}</td>
-              </tr>
-
-            </tbody>
-          </table>
-        
-          
-        
+      <div class="container-fluid" *ngIf="userDatils">
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="text"
+            placeholder=" Enter Book ID"
+            aria-label="Search"
+            [(ngModel)]="bookId"
+            [ngModelOptions]="{ standalone: true }"
+          />
+          <button
+            class="btn btn-outline-primary"
+            type="submit"
+            (click)="searchBook()"
+          >
+            Search
+          </button>
+        </form>
+      </div>
+      <br /><br /><br />
+      <table class="table table-bordered table-primary" *ngIf="confirmObj">
+        <thead>
+          <tr>
+            <th scope="col">#NO</th>
+            <th scope="col">ID</th>
+            <th scope="col">ISBN</th>
+            <th scope="col">Title</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let book of selectBookList; let i = index">
+            <td>{{ i + 1 }}</td>
+            <th>{{ book.id }}</th>
+            <td>{{ book.isbn }}</td>
+            <td>{{ book.title }}</td>
+            <td>{{ book.price }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <button (click)="getBorrowDetails()" class="btn btn-secondary" *ngIf="confirmObj"> <i class="bi bi-cart3"></i> Borrow Book</button>
     </div>
   </div>
-  <br><br>
+  <br /><br />
   <div class="row">
     <br /><br />
     <div class="col-6">
@@ -89,11 +85,15 @@
           <h5 class="card-title"><b>User Details</b></h5>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><b>Email :</b>  {{ userDatils.email }}</li>
-          <li class="list-group-item"><b>Address :</b> {{ userDatils.address }}</li>
-          <li class="list-group-item"><b>Country :</b> {{ userDatils.country }}</li>
+          <li class="list-group-item"><b>Email :</b> {{ userDatils.email }}</li>
           <li class="list-group-item">
-            <b>Phone Number :</b>  {{ userDatils.phoneNum }}
+            <b>Address :</b> {{ userDatils.address }}
+          </li>
+          <li class="list-group-item">
+            <b>Country :</b> {{ userDatils.country }}
+          </li>
+          <li class="list-group-item">
+            <b>Phone Number :</b> {{ userDatils.phoneNum }}
           </li>
         </ul>
         <div class="card-body"></div>
